[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_ast_explorer"]

[project]
name = "mcp-ast-explorer"
version = "0.1.1"
description = "MCP server for Python AST/CST symbol exploration."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "libcst>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
mcp-ast-explorer = "mcp_ast_explorer.server:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["mcp_ast_explorer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
